2007-08-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-load-file): Re-add the `reload' arg.
	(inferior-haskell-reload-file): Re-instate the command.

	* haskell-mode.el (turn-on-haskell-hugs, turn-on-haskell-ghci):
	Make people work harder to use those obsolete packages.,

	* haskell-indent.el (haskell-indent-map): New var.
	(turn-on-haskell-indent, turn-off-haskell-indent): Use it together with
	keymap inheritance instead of inplace modifications.

	* haskell-indent.el (turn-on-haskell-indent): Add alternate binding for
	C-c C-|.  Suggested by David House <dmhouse@gmail.com>.

2007-07-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-type): Fix call to message.

2007-07-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Update license to GPLv3.

	* haskell-mode.el (haskell-ident-at-point): Extend it to cover
	all elements of a qualified name.

2007-06-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-mode.el (haskell-mode-map): Remove C-c C-r binding.

	* inf-haskell.el (inferior-haskell-load-file): Remove reload arg.
	(inferior-haskell-reload-file): Remove.

2007-06-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-compute-module-alist): Fix regexps.
	(inferior-haskell-module-alist-file): Thinko.

	* inf-haskell.el (inferior-haskell-run-command): New var.
	(inferior-haskell-load-and-run): New command.

	* inf-haskell.el (inferior-haskell-map-internal-ghc-ident): New var.
	(inferior-haskell-map-internal-ghc-ident): New fun.
	(inferior-haskell-find-haddock): Use it.

	* inf-haskell.el (inferior-haskell-module-alist-file): Use a file in
	/tmp rather than ~/ by default.
	(inferior-haskell-compute-module-alist):
	Rename from inferior-haskell-populate-module-alist.
	Just return the result without saving it in any cache.
	(inferior-haskell-read-module-alist-cache): Delete.
	(inferior-haskell-module-alist): New function which replaces it, taking